College Problems: Menu to perform
1.Multiplication table \n 2.Factor of a no \n 3.Fibnoacci series upto a limit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "d:/MANAV DATA/Coding/c-programs",
-      "program": "d:/MANAV DATA/Coding/c-programs/build/Debug/outDebug",
+      "cwd": "d:/MANAV DATA/Coding/c-programs/CollegeProblems",
+      "program": "d:/MANAV DATA/Coding/c-programs/CollegeProblems/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
