--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "d:/MANAV DATA/Coding/c-programs/CalebCodingProblems",
-      "program": "d:/MANAV DATA/Coding/c-programs/CalebCodingProblems/build/Debug/outDebug",
+      "cwd": "d:/MANAV DATA/Coding/c-programs",
+      "program": "d:/MANAV DATA/Coding/c-programs/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
